ensure right side of viewport has distance to the edge from last card on mobile

--- a/express/code/blocks/discover-cards/discover-cards.css
+++ b/express/code/blocks/discover-cards/discover-cards.css
@@ -58,7 +58,7 @@ main .section .discover-cards {
 /* Default style - centered */
 .discover-cards.flip .cards-container.gallery {
   display: grid;
-  grid-auto-flow: column;
+  /* grid-auto-flow: column; */
   grid-auto-columns: 250px;
   gap: 16px;
   overflow-x: scroll;
@@ -83,7 +83,6 @@ main .section .discover-cards {
 @media (max-width: 1050px) {
   .discover-cards.flip .cards-container.gallery {
     justify-content: start;
-    width: 100%;
   }
 }
 
@@ -214,7 +213,7 @@ main .section .discover-cards {
 
 .discover-cards.flip .gallery {
   display: grid;
-  grid-auto-flow: column;
+  grid-auto-flow: column;  
   grid-auto-columns: 250px;
 }
 
